--- a/html-css/week2/index.html
+++ b/html-css/week2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>week1 assigment</title>
+    <title>week2 assignment</title>
 </head>
 <body>
     
