add week1 and 2

--- a/html-css/week1/index.html
+++ b/html-css/week1/index.html
@@ -1,13 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>week1 assigment</title>
-</head>
+<html>
+ <title>Curriculum Vitae</title>
+ <h1>Curriculum Vitae</h1>
 <body>
-    
-</body>
+
+  <p>Personal information;</p>
+  <ul>
+    <li>2014: When i started my current job at McDonald's.</li>
+    <li>2012: I worked at Red Cross in their cafeteria.</li>
+    <li>2012: I did a practical at Coop Consum</li>
+  </ul>
+  <p>Education;</p>
+  <p>2019 Mar-Sept:       Web development (Frontend and backend  development)</p>
+  <ul>
+        <li>HTML.</li>
+        <li> CSS. </li>
+        <li>Java script. </li>
+        <li>Node.js. </li>
+        <li>Git.</li>
+        <p>Database;</p>
+        <li>Structured Query Language (SQL).</li>
+        <li>The construction of a database system.</li>
+        <li>MySQL as an example of a relational database system.</li>
+        <li>Non-relational data and NoSQL.</li>
+      </ul>
+  <p> 2019:  I am taking extra distance courses, which are:</p>
+  <ul>
+        <li>introduction to Object oriented programming</li>
+        <li> Introduction to cloud computing</li>
+        <li>Business Ethics</li>
+        <li> Academic English Basic Course</li>
+      </ul>
+
+   <p>2015 -2018      in my last year oF my Bachelor Degree in Information Management   </p>
+           <p>Relevant courses from the degree:</p>
+      <ul>
+            <li>Business Economics and Information Management.</li>
+            <li>Organization, Innovation and System Design.</li>
+            <li>Information in context including Information architecture</li>
+            <li>Computer mediated communication and collaboration</li>
+            <li> Introduction to Business Administration</li>
+            <li>Communication ( corporate communication, organisational communication)</li>
+          </ul>
+    <p>Electives</p>
+    <ul>
+            <li> Undergraduate  Financial modeling</li>
+            <li> Undergraduate consumer behavior and customer analysis</li>
+            <li> Big data analytics for managers</li>
+            <li>Managing people</li>
+          </ul>
+    <p>2018:                SAP Next-gen diploma</p>
+    <p>2017- continuing     studying Swedish at primary level ( Grundläggande)</p>
+    <p>2012:                Got a diploma in business administration and customer serve  at Lernia school in Sweden.</p>
+    <p>2012:                Studied Swedish SFI (Swedish for foreigners)  in Åseda Sweden.</p>
+    <p>2006:                Studied my upper secondary school at Mount Pleasant school in Zimbabwe my                    home  country at which I did all of my courses in English</p>
+
+    <p>Skills</p>
+
+    <ul>
+            <li>Excel </li>
+            <li>Microsoft  </li>
+            <li> Tableau</li>
+            <li>Power point</li>
+          </ul>
+    <p>Language</p>
+    <p>I am fluent in Shona my native language and I speak and write fluent English. As for Swedish, I can write, read and speak at a primary level.</p>
+    <p>Others</p>
+    <p> I like travelling and going on adventures that includes trying out new things and spending time with my family</p>
+    <p>Personal information</p>
+    <p>I come from Zimbabwe and I currently live in Malmö. I have a Swedish residence permanent permit and I’m a single mother of a eight year old girl</p>
+        </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
