--- a/html-css/week3/index.html
+++ b/html-css/week3/index.html
@@ -12,7 +12,24 @@
 		<div class="logo">
 			<img src="images/logo-ro-eng.svg" alt="logotype">
 		</div>
+		<nav>
+			<div class="home">
+				<a href="/">Home</a>
+			</div>
+			<div class="menu">
+				<ul>
+					<li>
+						<a href="#">Latest</a>
+					</li>
+					<li>2</li>
+					<li>3</li>
+					<li>4</li>
+					<li>5</li>
+				</ul>
+			</div>
+		</nav>
 	</header>
+	<main>
 	<div class="hero">
 		<div class="col2">
 			<div class="left">
@@ -23,5 +40,9 @@
 			</div>
 		</div>
 	</div>
+	</main>
+	<footer>
+
+	</footer>
 </body>
 </html>
